--- a/lang/ru.json
+++ b/lang/ru.json
@@ -50,85 +50,17 @@
     "MENU_SETTINGS": "Настройки меню",
     "USER_GUIDE": "Руководство",
     "SHOW_HIDDEN": "Показать скрытые",
-    "SHOW_DELETE": "Показать Удалить",
-    "PAGE_SWAP": "Переключение страниц",
-    "RIGHT_SIDE_MODE": "Режим правой стороны",
-    "OVERLAY_VERSIONS": "Версии оверлеев",
-    "PACKAGE_VERSIONS": "Версии пакетов",
-    "CLEAN_VERSIONS": "Аккуратные версии",
-    "KEY_COMBO": "Комбинация",
-    "MODE": "Режим",
-    "MODES": "Режимы",
-    "LANGUAGE": "Язык",
-    "OVERLAY_INFO": "Информация",
-    "SOFTWARE_UPDATE": "Обновление",
-    "UPDATE_ULTRAHAND": "Обновить Ultrahand",
-    "UPDATE_LANGUAGES": "Обновить локализацию",
-    "SYSTEM": "Система",
-    "DEVICE_INFO": "Данные устройства",
-    "FIRMWARE": "Прошивка",
-    "BOOTLOADER": "Загрузчик",
-    "HARDWARE": "Оборудование",
-    "MEMORY": "Память",
-    "VENDOR": "Производитель",
-    "MODEL": "Модель",
-    "STORAGE": "Хранилище",
-    "NOTICE": "Уведомление",
-    "UTILIZES": "Использует",
-    "FREE": "Свободно",
-    "MEMORY_EXPANSION": "Расширение памяти",
-    "REBOOT_REQUIRED": "*Требуется перезагрузка.",
-    "LOCAL_IP": "Локальный IP",
-    "WALLPAPER": "Обои",
-    "THEME": "Тема",
-    "DEFAULT": "Стандартная",
-    "ROOT_PACKAGE": "Корневой пакет",
-    "SORT_PRIORITY": "Приоритет сортировки",
-    "OPTIONS": "Опции",
-    "FAILED_TO_OPEN": "Файл не открывается",
-    "LAUNCH_COMBOS": "Комбинации запуска",
-    "NOTIFICATIONS": "Уведомления",
-    "OPAQUE_SCREENSHOTS": "Непрозрачные скриншоты",
-    "ON": "Вкл",
-    "OFF": "Выкл",
-    "PACKAGE_INFO": "Информация",
-    "TITLE": "Название",
-    "VERSION": "Версия",
-    "CREATOR": "Автор(ы)",
-    "ABOUT": "Описание",
-    "CREDITS": "Заслуги",
-    "OK": "ОК",
-    "BACK": "Назад",
-    "HIDE": "Скрыть",
-    "CANCEL": "Отмена",
-    "REBOOT_TO": "Перезагрузить в",
-    "REBOOT": "Перезагрузка",
-    "SHUTDOWN": "Выключение",
-    "BOOT_ENTRY": "Запись загрузки",
-    "GAP_1": "     ",
-    "GAP_2": "  ",
-    "USERGUIDE_OFFSET": "177",
-    "SETTINGS_MENU": "Настройки",
-    "SCRIPT_OVERLAY": "Смотреть скрипты",
-    "STAR_FAVORITE": "Избранное",
-    "APP_SETTINGS": "Настройки пункта",
-    "ON_MAIN_MENU": "В главном меню",
-    "ON_A_COMMAND": "На команде",
-    "ON_OVERLAY_PACKAGE": "На оверлее/пакете",
-    "FEATURES": "Функции",
-    "SWIPE_TO_OPEN": "Свайп для открытия",
-    "THEME_SETTINGS": "Настройки темы",
     "DYNAMIC_LOGO": "Динамический логотип",
     "SELECTION_BACKGROUND": "Фон выбора",
     "SELECTION_TEXT": "Текст выбора",
     "SELECTION_VALUE": "Значение выбора",
-    "LIBULTRAHAND_TITLES": "Заголовки libultrahand",
-    "LIBULTRAHAND_VERSIONS": "Версии libultrahand",
+    "LIBRYAZHENKAHAND_TITLES": "Заголовки libryazhenkahand",
+    "LIBRYAZHENKAHAND_VERSIONS": "Версии libryazhenkahand",
     "PACKAGE_TITLES": "Заголовки пакетов",
-    "ULTRAHAND_HAS_STARTED": "Ultrahand запущен.",
+    "RYAZHENKAHAND_HAS_STARTED": "Ryazhenkahand запущен.",
     "NEW_UPDATE_IS_AVAILABLE": "Доступно обновление!",
     "REBOOT_IS_REQUIRED": "Требуется перезагрузка.",
-    "HOLD_A_TO_DELETE": "Удерживайте  для удаления",
+    "HOLD_A_TO_DELETE": "Удерживайте  для удаления",
     "SELECTION_IS_EMPTY": "Выбор пуст!",
     "SUNDAY": "Воскресенье",
     "MONDAY": "Понедельник",
