--- a/lang/en.json
+++ b/lang/en.json
@@ -50,85 +50,17 @@
     "MENU_SETTINGS": "Menu Settings",
     "USER_GUIDE": "User Guide",
     "SHOW_HIDDEN": "Show Hidden",
-    "SHOW_DELETE": "Show Delete",
-    "PAGE_SWAP": "Page Swap",
-    "RIGHT_SIDE_MODE": "Right-side Mode",
-    "OVERLAY_VERSIONS": "Overlay Versions",
-    "PACKAGE_VERSIONS": "Package Versions",
-    "CLEAN_VERSIONS": "Clean Versions",
-    "KEY_COMBO": "Key Combo",
-    "MODE": "Mode",
-    "MODES": "Modes",
-    "LANGUAGE": "Language",
-    "OVERLAY_INFO": "Overlay Info",
-    "SOFTWARE_UPDATE": "Software Update",
-    "UPDATE_ULTRAHAND": "Update Ultrahand",
-    "UPDATE_LANGUAGES": "Update Languages",
-    "SYSTEM": "System",
-    "DEVICE_INFO": "Device Info",
-    "FIRMWARE": "Firmware",
-    "BOOTLOADER": "Bootloader",
-    "HARDWARE": "Hardware",
-    "MEMORY": "Memory",
-    "VENDOR": "Vendor",
-    "MODEL": "Model",
-    "STORAGE": "Storage",
-    "NOTICE": "Notice",
-    "UTILIZES": "Utilizes",
-    "FREE": "free",
-    "MEMORY_EXPANSION": "Memory Expansion",
-    "REBOOT_REQUIRED": "*Reboot required.",
-    "LOCAL_IP": "Local IP",
-    "WALLPAPER": "Wallpaper",
-    "THEME": "Theme",
-    "DEFAULT": "default",
-    "ROOT_PACKAGE": "Root Package",
-    "SORT_PRIORITY": "Sort Priority",
-    "OPTIONS": "Options",
-    "FAILED_TO_OPEN": "Failed to open file",
-    "LAUNCH_COMBOS": "Launch Combos",
-    "NOTIFICATIONS": "Notifications",
-    "OPAQUE_SCREENSHOTS": "Opaque Screenshots",
-    "ON": "On",
-    "OFF": "Off",
-    "PACKAGE_INFO": "Package Info",
-    "TITLE": "Title",
-    "VERSION": "Version",
-    "CREATOR": "Creator(s)",
-    "ABOUT": "About",
-    "CREDITS": "Credits",
-    "OK": "OK",
-    "BACK": "Back",
-    "HIDE": "Hide",
-    "CANCEL": "Cancel",
-    "REBOOT_TO": "Reboot To",
-    "REBOOT": "Reboot",
-    "SHUTDOWN": "Shutdown",
-    "BOOT_ENTRY": "Boot Entry",
-    "GAP_1": "     ",
-    "GAP_2": "  ",
-    "USERGUIDE_OFFSET": "177",
-    "SETTINGS_MENU": "Settings Menu",
-    "SCRIPT_OVERLAY": "Script Overlay",
-    "STAR_FAVORITE": "Star/Favorite",
-    "APP_SETTINGS": "App Settings",
-    "ON_MAIN_MENU": "on Main Menu",
-    "ON_A_COMMAND": "on a command",
-    "ON_OVERLAY_PACKAGE": "on overlay/package",
-    "FEATURES": "Features",
-    "SWIPE_TO_OPEN": "Swipe to Open",
-    "THEME_SETTINGS": "Theme Settings",
     "DYNAMIC_LOGO": "Dynamic Logo",
     "SELECTION_BACKGROUND": "Selection Background",
     "SELECTION_TEXT": "Selection Text",
     "SELECTION_VALUE": "Selection Value",
-    "LIBULTRAHAND_TITLES": "libultrahand Titles",
-    "LIBULTRAHAND_VERSIONS": "libultrahand Versions",
+    "LIBRYAZHENKAHAND_TITLES": "libryazhenkahand Titles",
+    "LIBRYAZHENKAHAND_VERSIONS": "libryazhenkahand Versions",
     "PACKAGE_TITLES": "Package Titles",
-    "ULTRAHAND_HAS_STARTED": "Ultrahand has started.",
+    "RYAZHENKAHAND_HAS_STARTED": "Ryazhenkahand has started.",
     "NEW_UPDATE_IS_AVAILABLE": "New update is available!",
     "REBOOT_IS_REQUIRED": "Reboot is required.",
-    "HOLD_A_TO_DELETE": "Hold  to Delete",
+    "HOLD_A_TO_DELETE": "Hold  to Delete",
     "SELECTION_IS_EMPTY": "Selection is empty!",
     "SUNDAY": "Sunday",
     "MONDAY": "Monday",
