--- a/lang/ru.json
+++ b/lang/ru.json
@@ -57,7 +57,7 @@
     "LIBRYAZHENKAHAND_TITLES": "Заголовки libryazhenkahand",
     "LIBRYAZHENKAHAND_VERSIONS": "Версии libryazhenkahand",
     "PACKAGE_TITLES": "Заголовки пакетов",
-    "RYAZHENKAHAND_HAS_STARTED": "Ryazhenkahand запущен.",
+    "RYAZHENKAHAND_HAS_STARTED": "Ryazhahand запущен.",
     "NEW_UPDATE_IS_AVAILABLE": "Доступно обновление!",
     "REBOOT_IS_REQUIRED": "Требуется перезагрузка.",
     "HOLD_A_TO_DELETE": "Удерживайте  для удаления",
