--- a/lang/en.json
+++ b/lang/en.json
@@ -57,7 +57,7 @@
     "LIBRYAZHENKAHAND_TITLES": "libryazhenkahand Titles",
     "LIBRYAZHENKAHAND_VERSIONS": "libryazhenkahand Versions",
     "PACKAGE_TITLES": "Package Titles",
-    "RYAZHENKAHAND_HAS_STARTED": "Ryazhenkahand has started.",
+    "RYAZHENKAHAND_HAS_STARTED": "Ryazhahand has started.",
     "NEW_UPDATE_IS_AVAILABLE": "New update is available!",
     "REBOOT_IS_REQUIRED": "Reboot is required.",
     "HOLD_A_TO_DELETE": "Hold  to Delete",
